# tdd-fastapi

./: .flake8  Dockerfile  Dockerfile.prod  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/: config.py  db.py  main.py  summarizer.py
app/api/: crud.py  ping.py  summaries.py
app/models/: pydantic.py  tortoise.py
db/: Dockerfile
tests/: conftest.py  test_ping.py  test_summaries.py  test_summaries_unit.py
