[tool.poetry]
name = "tdd-fastapi"
version = "0.1.0"
description = "fastapi example from testdriven.io course"
authors = ["Daniel Omar Vergara Pérez <daniel.omar.vergara@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.0"
uvicorn = "^0.11.6"
asyncpg = "^0.20.1"
tortoise-orm = "^0.16.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
