[tool.poetry]
name = "tdd-fastapi"
version = "0.1.0"
description = "fastapi example from testdriven.io course"
authors = ["Daniel Omar Vergara Pérez <daniel.omar.vergara@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.0"
uvicorn = "^0.11.6"
asyncpg = "^0.20.1"
tortoise-orm = "^0.16.13"
requests = "^2.24.0"
gunicorn = "^20.0.4"
newspaper3k = "^0.2.8"
nltk = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
flake8 = "^3.8.3"
black = "^19.10b0"
isort = "^5.1.4"
pytest-xdist = "^1.33.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
